FGlobal finish, need detail retocretouch

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,1 +1,7 @@
-$primary-color: #bf0436;
+$primary-color: #c62650;
+$primary-font: 'Roboto', sans-serif;
+$title-font: 'Merriweather Sans', sans-serif;
+$text-color: rgba(0, 0, 0, 0.7);
+$light-gray: #f8f8f8;
+$dark-blue: #242f39;
+$secondary-color: #5842dc;
