--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -1,4 +1,327 @@
-*{
-	box-sizing: border-box;
-	
+
+body{
+	font-size: 16px;
+	font-family: $primary-font;
+	font-weight: 300;
+		-webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: $text-color;
 }
+
+/* ------------------
+	    BALISES 
+------------------ */
+a{
+	text-decoration: none;
+	color: $primary-color;
+}
+button{
+	font-family: $primary-font;
+}
+h1,h2,h3,h4,h5{
+	color: #000;
+	font-family: $title-font;
+
+}
+h2{
+	font-size: 2.5em;
+	line-height: 1.429em;
+}
+h3{
+	font-size: 1.625em;
+	line-height: 1.4em;
+}
+h4{
+	font-size: 1.25em;
+	line-height: 1.4em;
+	margin-bottom: 1em;
+}
+
+p{
+	line-height: 2em;
+}
+section{
+	padding: 70px 0;
+	overflow: hidden;
+}
+
+#map {
+	height: 400px;
+	width: 100%;
+}
+/* ------------------
+	   VARIOUS CLASS
+------------------ */
+.flex{
+	display: flex;
+}
+.relative{
+	position: relative;
+}
+.text-center{
+	text-align: center;
+}
+.text-right{
+	text-align: right;
+}
+.text-left{
+	text-align: left;
+}
+.lion-title{
+	&::before{
+		content: "";
+		width: 50px;
+		height: 50px;
+		background-image: url(../img/lion-black.svg);
+		display: inline-block;
+		position: relative;
+		top: 14px;
+		background-size: contain;
+		background-repeat: no-repeat;
+		margin-right: 6px;
+	}
+}
+
+.block-diagonal{
+	background-color: $dark-blue;
+	padding-top: 20px;
+	margin-bottom: 100px;
+	&::after{
+		    content: "";
+		    display: block;
+		    width: 100%;
+		    height: 100px;
+		    background-color: $dark-blue;
+		    transform: skew(0deg, -4deg);
+		    top: 10px;
+		    transform-origin: top right;
+		    position: relative;
+		    z-index: -1;
+		    margin-top: -100px;
+	}
+	p:last-child{
+		margin-bottom: 0;
+	}
+}
+.subtle-link{
+	text-transform: uppercase;
+}
+.linkfull{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	top: 0;
+}
+.index2{
+	position: relative;
+	z-index: 2;
+}
+
+/* ---------------------
+	WP DEFAULT CLASS
+----------------------- */
+img.size-large{
+	width: 100%;
+	height: auto;
+}
+/* ------------------
+	   INPUTS
+------------------ */
+input:focus,
+button:focus{
+	outline: none;
+	box-shadow: 0px 0px 16px $primary-color;
+}
+.searchform{
+	text-align: right;
+	position: relative;
+	input[type=text]{
+		border-radius: 20px;
+	    padding: 10px 40px 10px 30px;
+	    display: inline-block;
+	    border: 1px solid #ccc;
+	    color: $text-color;
+	    -webkit-transition: all .2s ease-in-out;
+	    -o-transition: all .2s ease-in-out;
+	    transition: all .2s ease-in-out;
+		   
+	    &::placeholder { 
+		   color: #939598;
+		}
+		&:focus{
+			outline: none;
+			box-shadow: 0px 0px 16px $primary-color;
+			border-color:#fff; 
+		}
+	}
+	button{
+		right: 10px;
+		top: 45%;
+		transform: translateY(-50%);
+		background: none;
+		border: none;
+		color: $primary-color;
+		position: absolute;
+	}
+}
+/* ------------------
+	   button
+------------------ */
+.button{
+	border-radius: 20px;
+	padding: 10px 30px;
+	display: inline-block;
+	border: 1px solid $primary-color;
+	background-color: $primary-color;
+	color: #fff;
+	&:hover{
+		background-color: transparent;
+		color: $primary-color;
+	}
+	transition: all .2s ease-in-out;
+	+.button{
+		margin-left: 15px
+	}
+	&.square{
+		border-radius: 0;
+		padding: 10px 20px;
+	}
+	&.gray{
+		background-color: #e5e4e4;
+		border: 1px solid #e5e4e4;
+		color: #696969;
+		&:hover{
+			background-color: $primary-color;
+			color: #fff;
+		}
+	}
+}
+.button.secondary{
+	border-color: $secondary-color;
+	background-color: $secondary-color;
+	&:hover{
+		color: $secondary-color;
+	}
+}
+
+.button.alt{
+	color: $primary-color;
+	background-color: transparent;
+	&:hover{
+		background-color: $primary-color;
+		color: #fff;
+	}
+}
+.button.alt.secondary{
+	color: $secondary-color;
+	&:hover{
+		background-color: $secondary-color;
+		color: #fff;
+	}
+}
+
+/* ------------------
+	   INVERTED
+------------------ */
+.inverted{
+	color: #fff;
+	
+	h1,h2,h3,h4,h5{
+		color: #fff;
+	}
+	.button{
+		color: $dark-blue;
+		background-color: #fff;
+		border-color: #fff;
+		&:hover{
+			color: #fff;
+			background-color: transparent;
+		}
+	}
+	
+	.button.alt{
+		color: #fff;
+		background-color: transparent;
+		border-color: #fff;
+		&:hover{
+			color: $dark-blue;
+			background-color: #fff;
+		
+		}
+	}
+	&.primarybg a{
+		color: #fff;
+	}
+	&.primarybg .button{
+		color: $primary-color;
+		&:hover{
+			color: #fff;
+		}
+		&.alt{
+			color: #fff;
+			&:hover{
+				color: $primary-color;
+			}
+		}
+	}
+}
+/* ------------------
+	    HEADER 
+------------------ */
+.logo{
+	//icon: 45x42px logo width: 118px
+	display: block;
+	width: 118px;
+	padding-left: 52px;
+	padding-top: 4px;
+	height: 42px;
+	background-image: url('../img/lion-white.svg');
+	background-size: contain;
+	background-position: left center;
+	background-repeat: no-repeat;
+	font-size: 28px;
+}
+.logo.black{
+	background-image: url('../img/lion-black.svg');
+	color: #000;
+}
+header{
+	background-color: $primary-color;
+	padding: 45px 0;
+	.logo{
+		//icon: 45x42px logo width: 118px
+		float: left;
+	}
+	nav.primary{
+		float: left;
+		width: calc(100% - (118px + 240px));
+		line-height: 0.7em;
+		text-align: center;
+	}
+	.secondary_nav{
+		width: 240x;
+		float: right;
+	}
+	a{
+		color: #fff;
+	}
+}
+nav{
+	ul{
+		list-style: none;
+		li{
+			display: inline-block;
+			margin-right: 33px;
+		}
+	}
+}
+
+/* ----------------------------
+	    PAGE TITLE HEADER 
+---------------------------- */
+#pageTitle{
+	background-color: $light-gray;
+	padding: 100px 0 30px;
+}
+
