test after rename username github

--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -74,7 +74,8 @@
 			figcaption{
 				margin-top: 20px;
 				cite{
-					font-style: normal;				}
+					font-style: normal;				
+				}
 				a{
 					color: #000;
 					&:hover{
