--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -5,3 +5,12 @@ $text-color: rgba(0, 0, 0, 0.7);
 $light-gray: #f8f8f8;
 $dark-blue: #242f39;
 $secondary-color: #5842dc;
+
+
+// Defining values
+$screen-sm-min: 768px;
+$screen-xs-max: ($screen-sm-min - 1);
+$screen-md-min: 992px;
+$screen-sm-max: ($screen-md-min - 1);
+$screen-lg-min: 1200px;
+$screen-md-max: ($screen-lg-min - 1);
