--- a/assets/sass/pages/_blog.scss
+++ b/assets/sass/pages/_blog.scss
@@ -1,4 +1,7 @@
 .blog-intro{
+
+	margin-top: 130px;
+	
 	margin-bottom: 115px;
 	h2{
 		font-size: 1.375em;
@@ -14,25 +17,52 @@
 .articles-list{
 	article{
 		margin-bottom: 60px;
+		@media (max-width: $screen-xs-max) {
+			position: relative;
+			margin-bottom: 0;
+			padding-bottom: 20px;
+			padding-top: 20px;
+
+			&+article{
+				border-top: 1px solid #efefef;
+			}
+		}
+		
 		figure{
 			float: left;
 			padding: 0;
 			width: 300px;
 			margin: 0 30px 0 0;
+			@media (max-width: $screen-xs-max) {
+				width: 100px;
+			}
 		}
 		.article-excerpt{
 			float: left;
 			width: calc(100% - 330px);
+			@media (max-width: $screen-xs-max) {
+				width: calc(100% - 130px);
+			}
 			p{
 				line-height: 2.2em;
+				@media (max-width: $screen-xs-max) {
+					display: none;
+				}
 			}
 		}
 		h4{
 			margin-top: 0;
 			color: $primary-color;
+			@media (max-width: $screen-xs-max) {
+				margin-bottom: 0px;
+				@include verticalcenter();
+			}
 		}
 		.article-footer{
 			margin-top: 30px;
+			@media (max-width: $screen-xs-max) {
+				display: none;
+			}
 		}
 		.article-buttons{
 			float: left;
@@ -46,6 +76,7 @@
 		.comments_number{
 			color: $primary-color;
 		}
+		
 		
 
 	}
@@ -74,4 +105,18 @@
 			content: "\f099";
 		}
 	}
+}
+
+
+@media (max-width: $screen-xs-max) {
+.blog-intro{
+
+	.searchform{
+		position: static;
+		top: initial;
+		transform: translateY(0%);
+		right: initial;
+		display: inline-block;
+	}
+}
 }
