--- a/assets/sass/pages/_homepage.scss
+++ b/assets/sass/pages/_homepage.scss
@@ -11,7 +11,7 @@ body.home header{
 	h2{
 		font-size: 2.625em;
 	}
-	background: linear-gradient(45deg, #8c1b39 0%,#c62650 100%); 
+	background: linear-gradient(45deg, darken( $primary-color, 15% ) 0%,$primary-color 100%); 
 	height: 90vh;
 	position: relative;
 	min-height: 450px;
@@ -19,17 +19,33 @@ body.home header{
 		position: absolute;
 		top: 55%;
 		transform: translateY(-50%);
+		@media (max-width: $screen-xs-max) {
+			position: static;
+			transform: none;
+			text-align: center;
+			padding-bottom: 10px;
+		}
 	}
 	p{
 		margin-bottom: 120px;
+		@media (max-width: $screen-xs-max) {
+			margin-bottom: 40px;
+		}
 	}
 	.macbook{
 		position: absolute;
-		right: 5%;
-		bottom: 10%;
-		width: 45%;
+		left: 86%;
+		bottom: -30%;
+		width: 850px;
+		max-width: none;
 		display: block;
 		height: auto;
+		@media (max-width: $screen-xs-max) {
+			position: static;
+			width: 100%;
+			height: auto;
+			margin-bottom: 40px;
+		}
 	}
 }
 
@@ -39,17 +55,12 @@ body.home header{
 		margin-bottom: 90px;
 	}
 	.mockup{
-		width: 700px;
-		float: left;
-		padding-right: 30px;
 		img{
 			max-width: 100%;
 			height: auto;
 		}
 	}
 	.mockup-info{
-		float: left;
-		width: 470px;
 		ul{
 			padding: 1em 0 0 0;
 			
@@ -77,9 +88,6 @@ body.home header{
 .steps{
 	margin-top: 100px;
 	.step{
-		width: 33%;
-		float: left;
-		padding: 0 20px;
 		figure{
 			height: 135px;
 			img{
@@ -121,7 +129,7 @@ section.quote{
 				width: 70px;
 				position: relative;
 				margin-right: 12px;
-				background-color: #c62650;
+				background-color: $primary-color;
 				top: -0.2em;
 			}
 		}
@@ -132,6 +140,14 @@ section.quote{
 	background-color: $light-gray;
 	padding-top: 0;
 	padding-bottom: 0;
+	.buttons{
+		margin-bottom: 90px;
+		margin-top: 60px;
+	}
+	.subtle-link{
+		margin-top: 40px;
+		display: inline-block;
+	}
 	.big-round-title{
 		position: relative;
 		padding: 130px 0 80px 0;
@@ -144,7 +160,9 @@ section.quote{
 			border-radius: 100% 100% 0 0;
 			left: -20%;
 			right: -20%;
-			bottom: -200%;
+			@media (max-width: $screen-xs-max) {
+				bottom: 0;
+			}
 			top: 30px;
 			z-index: 0;
 		}
@@ -156,9 +174,7 @@ section.quote{
 	.pricing-content{
 		background-color: $primary-color;
 		.pricing-col{
-			width: 33%;
 			padding: 30px;
-			float: left;
 		}
 		.princing-box{
 			background-color: #fff;
@@ -185,6 +201,10 @@ section.quote{
 				right: -10%;
 				height: 150px;
 				border-radius: 100%;
+				@media (max-width: $screen-xs-max) {
+					left: -100%;
+					right: -100%;
+				}
 			}
 		}
 		.price{
@@ -227,7 +247,8 @@ section.quote{
 				position: absolute;
 				z-index: -1;
 				border-radius: 100px;
-				left: 25%;
+				left: 50%;
+				transform: translateX(-100%);
 			}
 		}
 	}
@@ -237,15 +258,40 @@ section.quote{
 	margin-bottom: 490px;
 	background-color: $secondary-color;
 	overflow: visible;
+	h1{
+		font-size: 2.5em;
+		line-height: 1.5em;
+	}
 	.iphone{
-		display: flex;
-		justify-content: center;
-		div{
-			padding-top: 200px;
+		position: relative;
+
+		.apple-store-wrap,
+		.playstore-wrap{
+			position: absolute;
+			top: 200px;
+			width: 28%;
+			text-align: right;
+			@media (max-width: $screen-xs-max) {
+				position: static;
+				width: 100%;
+				margin-bottom: 10px;
+				text-align: center;
+			}
+		}
+		.playstore-wrap{
+			right: 0;
+			text-align: left;
+			@media (max-width: $screen-xs-max) {
+				text-align: center;
+			}
 		}
 		img{
 			margin-bottom: -490px;
 		}
+	}
+	.button{
+		font-size: 1.250em;
+		border-radius: 100px;
 	}
 }
 
@@ -255,6 +301,13 @@ section.quote{
 		border-bottom: 3px solid #eae9ed;
 		transition: all .3s ease-in-out;
 		position: relative;
+		@media (max-width: $screen-xs-max) {
+			border-bottom: none;
+			img{
+				width: 100%;
+				height: auto;
+			}
+		}
 		&:hover{
 			border-bottom-color: $primary-color;
 		}
