before change breakpoint

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -53,7 +53,11 @@ footer{
 		input, .button{
 			float: left;
 			height: 63px;
-			border-radius: 100px;
+			border-radius: 100px;			
+			@media (max-width: $screen-xs-max) {
+				float: none;
+			}
+
 		}
 		input{
 			
@@ -63,6 +67,10 @@ footer{
 			margin-right: -50px;
 			width: calc( 100% - 235px);
 			transition: all .2s ease-in-out;
+			@media (max-width: $screen-xs-max) {
+				width: 100%;
+			}
+
 			&:focus{
 				outline: none;
 				box-shadow: 0px 0px 16px $primary-color;
@@ -84,6 +92,12 @@ footer{
 				border-color: $dark-blue;
 				color: #fff;
 			}
+			@media (max-width: $screen-xs-max) {
+				margin: 20px auto 0;
+				display: block;
+				
+			}
+
 		}
 		&::after{
 			display: block;
@@ -130,6 +144,7 @@ footer{
 	@media (max-width: $screen-xs-max) {
 		.col-4{
 			text-align: center;
+			margin-bottom: 80px;
 		}
 		.logo{
 			display: inline-block;
@@ -144,6 +159,7 @@ footer{
 			&.right ul{
 				margin: 0;
 				text-align: center;
+				padding: 0;
 			}
 		}
 	}
