--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -7,10 +7,36 @@ $dark-blue: #242f39;
 $secondary-color: #5842dc;
 
 
-// Defining values
+// Defining values.  https://www.sitepoint.com/managing-responsive-breakpoints-sass/
 $screen-sm-min: 768px;
 $screen-xs-max: ($screen-sm-min - 1);
 $screen-md-min: 992px;
 $screen-sm-max: ($screen-md-min - 1);
 $screen-lg-min: 1200px;
 $screen-md-max: ($screen-lg-min - 1);
+
+
+// Defining values
+$small-range:   (0em, 640px);       /* 0, 640px */
+$medium-range:  (640px, 1024px);  /* 641px, 1024px */
+$large-range:   (1025px, 1440px);  /* 1025px, 1440px */
+$xlarge-range:  (1441px, 1920px); /* 1441px, 1920px */
+$xxlarge-range: (1921px);       /* 1921px */
+
+// Defining media queries
+$screen:       "only screen" !default;
+$landscape:    "#{$screen} and (orientation: landscape)" !default;
+$portrait:     "#{$screen} and (orientation: portrait)" !default;
+$small-up:     $screen !default;
+$small-only:   "#{$screen} and (max-width: #{upper-bound($small-range)})" !default;
+$medium-up:    "#{$screen} and (min-width:#{lower-bound($medium-range)})" !default;
+$medium-only:  "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})" !default;
+$large-up:     "#{$screen} and (min-width:#{lower-bound($large-range)})" !default;
+$large-only:   "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})" !default;
+$xlarge-up:    "#{$screen} and (min-width:#{lower-bound($xlarge-range)})" !default;
+$xlarge-only:  "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})" !default;
+$xxlarge-up:   "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})" !default;
+$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})" !default;
+
+// Usage 
+//@media #{$small-up}     { ... }
