change breakpoint and add stickynav

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -16,7 +16,7 @@
 			&+figure{
 				margin-left: 130px;
 			}
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				display: block;
 				width: 50%;
 				float: left;
@@ -54,7 +54,7 @@ footer{
 			float: left;
 			height: 63px;
 			border-radius: 100px;			
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				float: none;
 			}
 
@@ -67,7 +67,7 @@ footer{
 			margin-right: -50px;
 			width: calc( 100% - 235px);
 			transition: all .2s ease-in-out;
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				width: 100%;
 			}
 
@@ -92,7 +92,7 @@ footer{
 				border-color: $dark-blue;
 				color: #fff;
 			}
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				margin: 20px auto 0;
 				display: block;
 				
@@ -141,7 +141,7 @@ footer{
 			margin-left: 25px;
 		}
 	}
-	@media (max-width: $screen-xs-max) {
+	@include breakpoint(phone) {
 		.col-4{
 			text-align: center;
 			margin-bottom: 80px;
