--- a/assets/sass/pages/_blog.scss
+++ b/assets/sass/pages/_blog.scss
@@ -17,7 +17,7 @@
 .articles-list{
 	article{
 		margin-bottom: 60px;
-		@media (max-width: $screen-xs-max) {
+		@include breakpoint(phone) {
 			position: relative;
 			margin-bottom: 0;
 			padding-bottom: 20px;
@@ -33,19 +33,19 @@
 			padding: 0;
 			width: 300px;
 			margin: 0 30px 0 0;
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				width: 100px;
 			}
 		}
 		.article-excerpt{
 			float: left;
 			width: calc(100% - 330px);
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				width: calc(100% - 130px);
 			}
 			p{
 				line-height: 2.2em;
-				@media (max-width: $screen-xs-max) {
+				@include breakpoint(phone) {
 					display: none;
 				}
 			}
@@ -53,14 +53,14 @@
 		h4{
 			margin-top: 0;
 			color: $primary-color;
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				margin-bottom: 0px;
 				@include verticalcenter();
 			}
 		}
 		.article-footer{
 			margin-top: 30px;
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				display: none;
 			}
 		}
@@ -69,6 +69,9 @@
 		}
 		.social-like{
 			float: right;
+			@include breakpoint(sm-only) {
+				display: none;
+			}
 		}
 		.button{
 			margin-right: 25px;
@@ -108,7 +111,7 @@
 }
 
 
-@media (max-width: $screen-xs-max) {
+@include breakpoint(phone) {
 .blog-intro{
 
 	.searchform{
