--- a/assets/sass/pages/_contact.scss
+++ b/assets/sass/pages/_contact.scss
@@ -19,6 +19,10 @@
 				box-shadow: none;
 				border-bottom-color: black;
 			}
+			
+			@include breakpoint(phone) {
+				margin-top: 40px;
+			}
 		}
 	}
 
@@ -40,6 +44,11 @@
 .contact-aside ul{
 	padding: 0;
 	list-style: none;
+	@include breakpoint(phone) {
+		width: 85%;
+		margin: auto;
+		margin-top: 30px;
+	}
 	li{
 		position: relative;
 		margin-bottom: 20px;
