--- a/assets/sass/pages/_homepage.scss
+++ b/assets/sass/pages/_homepage.scss
@@ -4,7 +4,7 @@
 body.home header{
 	background-color: transparent;
 	position: absolute;
-	z-index: 2;
+	z-index: 90;
 	width: 100%;
 }
 #welcome{
@@ -19,7 +19,7 @@ body.home header{
 		position: absolute;
 		top: 55%;
 		transform: translateY(-50%);
-		@media (max-width: $screen-xs-max) {
+		@include breakpoint(phone) {
 			position: static;
 			transform: none;
 			text-align: center;
@@ -29,7 +29,7 @@ body.home header{
 	}
 	p{
 		margin-bottom: 120px;
-		@media (max-width: $screen-xs-max) {
+		@include breakpoint(phone) {
 			margin-bottom: 40px;
 		}
 	}
@@ -41,7 +41,7 @@ body.home header{
 		max-width: none;
 		display: block;
 		height: auto;
-		@media (max-width: $screen-xs-max) {
+		@include breakpoint(phone) {
 			position: static;
 			width: 100%;
 			height: auto;
@@ -161,7 +161,7 @@ section.quote{
 			border-radius: 100% 100% 0 0;
 			left: -20%;
 			right: -20%;
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				bottom: 0;
 			}
 			top: 30px;
@@ -176,6 +176,17 @@ section.quote{
 		background-color: $primary-color;
 		.pricing-col{
 			padding: 30px;
+			@include breakpoint(tablette) {
+				width: 50%;
+				&:first-child{
+					width: 100%;
+				}
+			}
+			@include breakpoint(md-down){
+				&:first-child{
+					text-align: center;
+				}
+			}
 		}
 		.princing-box{
 			background-color: #fff;
@@ -202,7 +213,7 @@ section.quote{
 				right: -10%;
 				height: 150px;
 				border-radius: 100%;
-				@media (max-width: $screen-xs-max) {
+				@include breakpoint(phone) {
 					left: -100%;
 					right: -100%;
 				}
@@ -272,7 +283,7 @@ section.quote{
 			top: 200px;
 			width: 28%;
 			text-align: right;
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				position: static;
 				width: 100%;
 				margin-bottom: 10px;
@@ -282,7 +293,7 @@ section.quote{
 		.playstore-wrap{
 			right: 0;
 			text-align: left;
-			@media (max-width: $screen-xs-max) {
+			@include breakpoint(phone) {
 				text-align: center;
 			}
 		}
@@ -302,7 +313,7 @@ section.quote{
 		border-bottom: 3px solid #eae9ed;
 		transition: all .3s ease-in-out;
 		position: relative;
-		@media (max-width: $screen-xs-max) {
+		@include breakpoint(phone) {
 			border-bottom: none;
 			img{
 				width: 100%;
