--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -23,6 +23,12 @@ h1,h2,h3,h4,h5{
 	font-family: $title-font;
 
 }
+
+h1{
+	font-size: 3em;
+	line-height: 1.429em;
+}
+
 h2{
 	font-size: 2.5em;
 	line-height: 1.429em;
@@ -35,6 +41,11 @@ h4{
 	font-size: 1.25em;
 	line-height: 1.4em;
 	margin-bottom: 1em;
+}
+h5{
+	font-size: 1.375em;
+	color: $primary-color;
+	text-transform: uppercase;
 }
 
 p{
