github udpdater compatibility

--- a/style.css
+++ b/style.css
@@ -2,4 +2,8 @@
 Theme Name: Huni Robin
 Author: Robin Ferrari
 Description: Theme huni developpé pour le cours de front end de David Bernard 
+Version: 0.0.1
+GitHub Theme URI: zeckart/la-gamelle
+GitHub Theme URI: https://github.com/zeckart/la-gamelle
+
 */
