spacing contact page

--- a/assets/sass/pages/_contact.scss
+++ b/assets/sass/pages/_contact.scss
@@ -9,6 +9,7 @@
 	font-weight: normal;
 }
 .contact-form{
+	margin-bottom: 80px;
 	.col-4{
 		input{
 			border: 0px;
@@ -89,3 +90,4 @@
 		}
 	}
 }
+
