--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -19,7 +19,13 @@
 }
 header{
 	background-color: $primary-color;
-	padding: 45px 0;
+	padding: 45px 0 30px;
+	&.transparent{
+		background-color: transparent;
+		position: absolute;
+		z-index: 90;
+		width: 100%;
+	}
 	.header-wrap{
 		top: -100px;
 		transition: all .3s ease-in-out;
@@ -161,6 +167,56 @@ nav{
 			width: 100%;
 			text-align: center;
 			margin-top: 50px;
+		}
+	}
+}
+nav .menu {
+	&>li{
+		padding-bottom: 15px;
+	}
+	.menu-item-has-children{
+		&:after{
+			content: "";
+			display: inline-block;
+			margin-left: 2px;
+			border: 4px solid transparent;
+			border-top-color: #fff;
+			position: relative;
+			top: 1px;
+		}	
+	}
+	.sub-menu{
+		opacity: 0;
+		position: absolute;
+		pointer-events: none;
+		z-index: -2;
+		transition: all .3s ease-in-out;
+		padding: 8px 0;
+		background-color: #fff;
+		margin-top: 15px;
+		text-align: left;
+		box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
+		li{
+			margin: 0;
+			padding: 0 24px;
+			display: block;
+			line-height: 2.1em;
+			background-color: #fff;
+			a{
+				color: #000;
+			}
+			&:hover{
+				background-color: $light-gray;
+			}
+		}
+	}
+	&>li{
+		&:hover{
+			.sub-menu{
+				opacity: 1;
+				pointer-events: all;
+				z-index: 2;
+			}
 		}
 	}
 }
