--- a/assets/sass/pages/_homepage.scss
+++ b/assets/sass/pages/_homepage.scss
@@ -1,12 +1,7 @@
 /* ----------------------------
 	    HOMEPAGE
 ---------------------------- */
-body.home header{
-	background-color: transparent;
-	position: absolute;
-	z-index: 90;
-	width: 100%;
-}
+
 #welcome{
 	h2{
 		font-size: 2.625em;
@@ -175,7 +170,7 @@ section.quote{
 	}
 	.pricing-content{
 		background-color: $primary-color;
-		.pricing-col{
+		.pricing-wrap{
 			padding: 30px;
 			@include breakpoint(tablette) {
 				width: 50%;
@@ -189,59 +184,7 @@ section.quote{
 				}
 			}
 		}
-		.princing-box{
-			background-color: #fff;
-			position: relative;
-			overflow: hidden;
-			padding: 45px;
-			.button{
-				width: 100%;
-				text-align: center;
-			}
-		}
-		.pricing-box-top{
-			position: relative;
-			height: 36px;
-			overflow: hidden;
-			background-color: #fff;
-			&::before{
-				background-color: $primary-color;
-				content: "";
-				display: block;
-				position: absolute;
-				left: -10%;
-				bottom: 10%;
-				right: -10%;
-				height: 150px;
-				border-radius: 100%;
-				@include breakpoint(phone) {
-					left: -100%;
-					right: -100%;
-				}
-			}
-		}
-		.price{
-			font-weight: bold;
-			font-size: 2.188em;
-			color: #000;
-		}
-		ul{
-			list-style: none;
-			padding: 0;
-			margin-bottom: 50px;
-			li{
-				padding-left: 18px;
-				position: relative;
-				margin-bottom: 15px;
-				&:before{
-					content: "\f0a9";
-					font-family: FontAwesome;
-					position: absolute;
-					left: 0;
-					color: $secondary-color;
-				}
-			}
-		}
+		
 	}
 }
 
