--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -5,8 +5,9 @@ $primary-font: 'Roboto', sans-serif !default ;
 $title-font: 'Merriweather Sans', sans-serif !default ;
 $logo-width: 118px !default;
 $logo-height: 42px !default;
+$text-color: rgba(0, 0, 0, 0.7) !default;
+$title-color: #000 !default;
 
-$text-color: rgba(0, 0, 0, 0.7);
 $light-gray: #f8f8f8;
 $dark-blue: #242f39;
 
