Work In Beaver Compatibility

--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -220,3 +220,15 @@ nav .menu {
 		}
 	}
 }
+
+
+/* ----------------------------
+	    PAGE TITLE HEADER 
+---------------------------- */
+#pageTitle{
+	background-color: $light-gray;
+	padding: 100px 0 30px;
+}
+.single #pageTitle{
+	margin-bottom: 100px;
+}
