--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -9,7 +9,7 @@ $text-color: rgba(0, 0, 0, 0.7) !default;
 $title-color: #000 !default;
 
 $light-gray: #f8f8f8;
-$dark-blue: #242f39;
+$primary-dark: #242f39;
 
 
 // Defining values.  https://www.sitepoint.com/managing-responsive-breakpoints-sass/
