--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -1,4 +1,11 @@
 #sidebar{
+	&>:first-child{
+		margin-top: 0;
+		h4{
+			margin-top: 0;
+		}
+
+	}
 	@include breakpoint(phone) {
 		text-align: center;
 	}
