--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -7,9 +7,12 @@ $logo-width: 118px !default;
 $logo-height: 42px !default;
 $text-color: rgba(0, 0, 0, 0.7) !default;
 $title-color: #000 !default;
-
 $light-gray: #f8f8f8;
+$header-background: $light-gray !default;
+
+
 $primary-dark: #242f39;
+
 
 
 // Defining values.  https://www.sitepoint.com/managing-responsive-breakpoints-sass/
