--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -13,6 +13,9 @@
 		width: 100%;
 		height: 100%;
 	}
+	@include breakpoint(phone) {
+		display: none;
+	}
 }
 .logo-mobile{
 	display: none;
@@ -83,6 +86,13 @@ header{
 	nav.primary{
 		line-height: 0.7em;
 		text-align: center;
+		ul{
+			padding-left: 0;
+		}
+		@include breakpoint(phone) {
+			text-align: left;
+			
+		}
 
 	}
 	.secondary_nav{
@@ -154,10 +164,12 @@ nav{
 	}
 	
 }
+
 .header-flex{
 	transition: all .3s ease-in-out;
 	display: flex;
 	justify-content: space-between;
+	
 	@include breakpoint(md-down) {
 		flex-direction: column;
 	}
@@ -195,6 +207,25 @@ nav{
 			width: 100%;
 			text-align: center;
 			margin-top: 50px;
+		}
+	}
+}
+
+.header-type-default{
+	.header-flex{
+		@include breakpoint(tablette){
+		flex-direction: row;
+		justify-content: space-between;
+		padding-top: 70px;
+			.logo{
+				position: absolute;
+				top: 30px;
+				left: 50%;
+				transform: translateX(-50%);
+			}
+			.secondary_nav{
+				position: static;
+			}
 		}
 	}
 }
@@ -244,9 +275,10 @@ nav .menu {
 		@include breakpoint(phone) {
 			position: static;
 			opacity: 1;
-			text-align: center;
 			box-shadow: none;
 			margin-top: 5px;
+			transition: none;
+			display: none;
 			li{
 				display: block;
 				padding: 0 5px;
@@ -341,77 +373,101 @@ nav .menu {
 }
 
 
-body.header-type-left{
-	#wrapper{
-		padding-left: 300px;
-		position: relative;
-	}
-	header{
-		position: absolute;
-		height: 100%;
-		width: 300px;
-		left: 0;
-		bottom: 0;
-		top: 0;
-		background-color: $header-background;
-		box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.1);
-	}
-	.header-flex{
-		display: block;
-	}
-	.logo{
-		margin: auto;
-	}
-	nav.primary{
-		ul{
-			padding: 0;
-			li{
-				display: block;
-				margin: 0;
-				padding: 1em 0;
-				font-size: 1.2em;
-				&+li{
-					border-top: 1px solid rgba($primary-color, 0.1);
-				}
-			}
-			
-			.sub-menu{
-				position: static;
-				opacity: 1;
-				text-align: center;
-				box-shadow: none;
-				margin-top: 5px;
-				background-color: transparent;
-				transition: all .3s ease-in-out;
-				margin-top: 20px;
-				display: none;
-
-				&.active{
-
-				}
-				a:hover{
-					color: $primary-color;
-				}
+@include breakpoint(sm-up) {
+	body.header-type-left{
+		#wrapper{
+			padding-left: 300px;
+			position: relative;
+		}
+		header{
+			position: absolute;
+			height: 100%;
+			width: 300px;
+			left: 0;
+			bottom: 0;
+			top: 0;
+			background-color: $header-background;
+			box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.1);
+		}
+		.header-flex{
+			display: block;
+		}
+		.logo{
+			margin: auto;
+		}
+		nav.primary{
+			ul{
+				padding: 0;
 				li{
 					display: block;
-					padding: 0 5px;
-					font-size: .85em;
-					background-color: transparent;
+					margin: 0;
+					padding: 1em 0;
+					font-size: 1.2em;
 					&+li{
-						border-top: none;
+						border-top: 1px solid rgba($primary-color, 0.1);
+					}
+					&::after{
+						display: none;
+					}
+				}
+				
+				.sub-menu{
+					position: static;
+					opacity: initial;
+					text-align: center;
+					box-shadow: none;
+					background-color: transparent;
+					transition: none;
+					margin-top: 20px;
+					display: none;
+	
+					&.active{
+	
+					}
+					a:hover{
+						color: $primary-color;
+					}
+					li{
+						display: block;
+						padding: 0 5px;
+						font-size: .85em;
+						background-color: transparent;
+						&+li{
+							border-top: none;
+						}
 					}
 				}
 			}
 		}
+		.secondary_nav{
+			position: relative;
+			top: initial;
+			right: initial;
+			text-align: center;
+			padding-top: 50px;
+			.huni-search{
+				position: absolute; top: 0; 
+				left:calc(50% - 20px);
+				display: block;
+				width: 40px;
+				border-radius: 30px;
+				font-size: 1.3em;
+				color: rgba(0, 0, 0, 0.3);
+				//border: 1px solid $primary-color;
+				i{
+					margin: 0;
+				}
+			}
+		}
+		
 	}
-	.secondary_nav{
-		position: static;
-		text-align: center;
-	}
-	
 }
-
-$padding-button:0px;
+$padding-button:5px;
+.header-type-default .huni-open-toggle{
+	@include breakpoint(sm-up){
+		display: none;	
+	}
+}
 .huni-open-toggle{
 	height: 11px;
 	width: 11px;
@@ -423,7 +479,8 @@ $padding-button:0px;
 	margin-left: 10px;
 	margin-top: 1px;
 	position: absolute;
-	
+	opacity: .5;
+	margin-top: -5px;
 	&::before,
 	&::after{
 		content: "";
@@ -433,16 +490,31 @@ $padding-button:0px;
 	&::before{
 		bottom: $padding-button;
 		top: $padding-button;
-		left: 5px + $padding-button;
+		left: calc(50% - 0.5px);
 		border-left: 1px solid #000;
+		transition: all .3s ease-in-out;
+		transform-origin: center center;
+
 	}
 	&::after{
-		top: 5px + $padding-button;
+		bottom: calc(50% - 0.5px);
 		left: $padding-button;
 		right: $padding-button;
 		border-bottom: 1px solid #000;
 	}
+	&.active::before{
+		
+		transform: rotateZ(90deg);
+	}
+	@include breakpoint(phone) {
+		width: 18px;
+		height: 18px;
+		position: relative;
+		float: right;
+	}
 }
+
+
 /* ----------------------------
 	    PAGE TITLE HEADER 
 ---------------------------- */
